# wg

./: .gitignore  CMakeLists.txt  Makefile  README.md  setup.sh  wg.cpp
.github/workflows/: release.yaml
src/: cli_handler.cpp  cli_handler.hpp  construct_tensor.cpp  construct_tensor.hpp  gpu_utils.cpp  gpu_utils.hpp  wg.cpp
